# stack-shared-library-example

./: README.md  hello.cabal  test.py
cbits/: hello.c
src/: Hello.hs
